add wp and fix mysql..

--- a/thverney/srcs/mysql/Dockerfile
+++ b/thverney/srcs/mysql/Dockerfile
@@ -1,7 +1,15 @@
-FROM nginx:alpine
+FROM alpine:latest
 
-RUN apk add --update \
-    mysql-client \
-    && rm -rf /var/cache/apk/*
+RUN apk update && \
+	apk add mysql mysql-client && \
+	addgroup mysql mysql && \
+	rm -rf /var/cache/apk/*
 
-ENTRYPOINT ["mysql"]
+COPY run.sh /bin/run.sh
+COPY my.cnf /etc/mysql/my.cnf
+
+VOLUME ["/var/lib/mysql"]
+
+EXPOSE 3306
+
+ENTRYPOINT ["/bin/run.sh"]
