--- a/thverney/srcs/nginx-deployment.yaml
+++ b/thverney/srcs/nginx-deployment.yaml
@@ -31,7 +31,7 @@ spec:
       nodePort: 443
       port: 443
 ---
-apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2
+apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: nginx
