--- a/elbouju/srcs/wordpress.yaml
+++ b/elbouju/srcs/wordpress.yaml
@@ -1,41 +1,56 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: wordpress-svc
+  name: wordpress
   labels:
-    app: wordpress-app
+    app: wordpress
 spec:
-  type: NodePort
   ports:
-  - port: 5050
-    nodePort: 5050
-    protocol: TCP
-    name: http
+    - port: 5050
+      nodePort: 5050
+      protocol: TCP
+      name: http
   selector:
-    app: wordpress-app
+    app: wordpress
+    tier: frontend
+  type: LoadBalancer
 ---
-apiVersion: apps/v1
+apiVersion: v1
+kind: PersistentVolumeClaim
+metadata:
+  name: wp-pv-claim
+  labels:
+    app: wordpress
+spec:
+  accessModes:
+    - ReadWriteOnce
+  resources:
+    requests:
+      storage: 1Gi
+---
+apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2
 kind: Deployment
 metadata:
-  name: wordpress-deployment
+  name: wordpress
   labels:
-    app: wordpress-app
+    app: wordpress
 spec:
-  replicas: 1
   selector:
     matchLabels:
-      app: wordpress-app
+      app: wordpress
+      tier: frontend
+  strategy:
+    type: Recreate
   template:
     metadata:
       labels:
-        app: wordpress-app
+        app: wordpress
+        tier: frontend
     spec:
       containers:
-      - name: wordpress
-        image: services/wordpress
-        ports:
-        - containerPort: 5050
+      - image: wordpress_alpine
         imagePullPolicy: Never
+        name: wordpress
         env:
           - name: DB_NAME
             value: wordpress
@@ -45,3 +60,13 @@ spec:
             value: admin
           - name: DB_HOST
             value: mysql-svc
+        ports:
+        - containerPort: 80
+          name: wordpress
+        volumeMounts:
+        - name: wordpress-persistent-storage
+          mountPath: /var/www/html
+      volumes:
+      - name: wordpress-persistent-storage
+        persistentVolumeClaim:
+          claimName: wp-pv-claim
