--- a/elbouju/srcs/nginx/Dockerfile
+++ b/elbouju/srcs/nginx/Dockerfile
@@ -5,13 +5,13 @@ RUN apk upgrade --update-cache --available \
 && rm -rf /var/cache/apk/*
 RUN	mkdir /etc/nginx/ssl
 
-RUN openssl req -x509 -nodes -days 365 -newkey rsa:2048 -subj '/C=FR/ST=75/L=Paris/O=42/CN=elbouju' -keyout /etc/ssl/certs/localhost.key -out /etc/ssl/certs/localhost.crt
+RUN openssl req -x509 -nodes -days 365 -newkey rsa:2048 -subj '/C=FR/ST=75/L=Paris/O=42/CN=thverney' -keyout /etc/ssl/certs/localhost.key -out /etc/ssl/certs/localhost.crt
 
 ADD default.conf /etc/nginx/default.conf
 ADD cert.pem /etc/nginx/ssl
 ADD key.pem /etc/nginx/ssl
 
-CMD nginx -t \
-&& nginx -g 'daemon off;
+EXPOSE 4000 80 443
 
-EXPOSE 80
+CMD nginx -t \
+&& nginx -g 'daemon off;'
