--- a/thverney/srcs/metallb-config.yaml
+++ b/thverney/srcs/metallb-config.yaml
@@ -1,6 +1,12 @@
 apiVersion: v1
-kind: Namespace
+kind: ConfigMap
 metadata:
-  name: metallb-system
-  labels:
-    app: metallb
+  namespace: metallb-system
+  name: config
+data:
+  config: |
+    address-pools:
+    - name: my-ip-space
+      protocol: layer2
+      addresses:
+      - 192.168.99.151/28
