--- a/thverney/srcs/wordpress.yaml
+++ b/thverney/srcs/wordpress.yaml
@@ -6,14 +6,14 @@ metadata:
     app: wordpress
 spec:
   ports:
-    - port: 80
-      nodePort: 5050
+    - port: 32505
+      targetPort: 5050
       protocol: TCP
       name: http
   selector:
     app: wordpress
     tier: frontend
-  type: LoadBalancer
+  type: ClusterIP
 ---
 apiVersion: v1
 kind: PersistentVolumeClaim
