--- a/thverney/srcs/wordpress.yaml
+++ b/thverney/srcs/wordpress.yaml
@@ -13,7 +13,7 @@ spec:
   selector:
     app: wordpress
     tier: frontend
-  type: ClusterIP
+  type: LoadBalancer
 ---
 apiVersion: v1
 kind: PersistentVolumeClaim
