--- a/thverney/srcs/phpmyadmin.yaml
+++ b/thverney/srcs/phpmyadmin.yaml
@@ -9,7 +9,7 @@ spec:
       targetPort: 5000
   selector:
     app: phpmyadmin
-  type: ClusterIP
+  type: LoadBalancer
 ---
 apiVersion: apps/v1
 kind: Deployment
