--- a/elbouju/srcs/metallb.yaml
+++ b/elbouju/srcs/metallb.yaml
@@ -1,44 +1,9 @@
-apiVersion: policy/v1beta1
-kind: PodSecurityPolicy
+apiVersion: v1
+kind: Namespace
 metadata:
   labels:
     app: metallb
-  name: controller
-  namespace: metallb-system
-spec:
-  allowPrivilegeEscalation: false
-  allowedCapabilities: []
-  allowedHostPaths: []
-  defaultAddCapabilities: []
-  defaultAllowPrivilegeEscalation: false
-  fsGroup:
-    ranges:
-    - max: 65535
-      min: 1
-    rule: MustRunAs
-  hostIPC: false
-  hostNetwork: false
-  hostPID: false
-  privileged: false
-  readOnlyRootFilesystem: true
-  requiredDropCapabilities:
-  - ALL
-  runAsUser:
-    ranges:
-    - max: 65535
-      min: 1
-    rule: MustRunAs
-  seLinux:
-    rule: RunAsAny
-  supplementalGroups:
-    ranges:
-    - max: 65535
-      min: 1
-    rule: MustRunAs
-  volumes:
-  - configMap
-  - secret
-  - emptyDir
+  name: metallb-system
 ---
 apiVersion: policy/v1beta1
 kind: PodSecurityPolicy
@@ -53,21 +18,13 @@ spec:
   - NET_ADMIN
   - NET_RAW
   - SYS_ADMIN
-  allowedHostPaths: []
-  defaultAddCapabilities: []
-  defaultAllowPrivilegeEscalation: false
   fsGroup:
     rule: RunAsAny
-  hostIPC: false
   hostNetwork: true
-  hostPID: false
   hostPorts:
   - max: 7472
     min: 7472
   privileged: true
-  readOnlyRootFilesystem: true
-  requiredDropCapabilities:
-  - ALL
   runAsUser:
     rule: RunAsAny
   seLinux:
@@ -75,9 +32,7 @@ spec:
   supplementalGroups:
     rule: RunAsAny
   volumes:
-  - configMap
-  - secret
-  - emptyDir
+  - '*'
 ---
 apiVersion: v1
 kind: ServiceAccount
@@ -124,14 +79,6 @@ rules:
   verbs:
   - create
   - patch
-- apiGroups:
-  - policy
-  resourceNames:
-  - controller
-  resources:
-  - podsecuritypolicies
-  verbs:
-  - use
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
@@ -158,7 +105,7 @@ rules:
   - create
   - patch
 - apiGroups:
-  - policy
+  - extensions
   resourceNames:
   - speaker
   resources:
@@ -184,21 +131,6 @@ rules:
   - watch
 ---
 apiVersion: rbac.authorization.k8s.io/v1
-kind: Role
-metadata:
-  labels:
-    app: metallb
-  name: pod-lister
-  namespace: metallb-system
-rules:
-- apiGroups:
-  - ''
-  resources:
-  - pods
-  verbs:
-  - list
----
-apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
 metadata:
   labels:
@@ -242,21 +174,6 @@ roleRef:
 subjects:
 - kind: ServiceAccount
   name: controller
-- kind: ServiceAccount
-  name: speaker
----
-apiVersion: rbac.authorization.k8s.io/v1
-kind: RoleBinding
-metadata:
-  labels:
-    app: metallb
-  name: pod-lister
-  namespace: metallb-system
-roleRef:
-  apiGroup: rbac.authorization.k8s.io
-  kind: Role
-  name: pod-lister
-subjects:
 - kind: ServiceAccount
   name: speaker
 ---
@@ -295,23 +212,8 @@ spec:
           valueFrom:
             fieldRef:
               fieldPath: status.hostIP
-        - name: METALLB_ML_BIND_ADDR
-          valueFrom:
-            fieldRef:
-              fieldPath: status.podIP
-        - name: METALLB_ML_LABELS
-          value: "app=metallb,component=speaker"
-        - name: METALLB_ML_NAMESPACE
-          valueFrom:
-            fieldRef:
-              fieldPath: metadata.namespace
-        - name: METALLB_ML_SECRET_KEY
-          valueFrom:
-            secretKeyRef:
-              name: memberlist
-              key: secretkey
-        image: metallb/speaker:v0.9.3
-        imagePullPolicy: Always
+        image: metallb/speaker:v0.8.1
+        imagePullPolicy: IfNotPresent
         name: speaker
         ports:
         - containerPort: 7472
@@ -334,7 +236,7 @@ spec:
       nodeSelector:
         beta.kubernetes.io/os: linux
       serviceAccountName: speaker
-      terminationGracePeriodSeconds: 2
+      terminationGracePeriodSeconds: 0
       tolerations:
       - effect: NoSchedule
         key: node-role.kubernetes.io/master
@@ -366,8 +268,8 @@ spec:
       - args:
         - --port=7472
         - --config=config
-        image: metallb/controller:v0.9.3
-        imagePullPolicy: Always
+        image: metallb/controller:v0.8.1
+        imagePullPolicy: IfNotPresent
         name: controller
         ports:
         - containerPort: 7472
