--- a/elbouju/srcs/nginx-deployment1.yaml
+++ b/elbouju/srcs/nginx-deployment1.yaml
@@ -1,24 +1,35 @@
 kind: Service
 apiVersion: v1
 metadata:
-  name: nginx-service
+  name: nginx
   labels:
     app: nginx
 spec:
-  type: LoadBalancer
   selector:
     app: nginx
   ports:
     - name: http
-      port: 32080
+      port: 80
       targetPort: 80
       protocol: TCP
+---
+kind: Service
+apiVersion: v1
+metadata:
+  name: nginx-service
+  labels:
+    app: nginx
+spec:
+  type: NodePort
+  selector:
+    app: nginx
+  ports:
     - name: ssh
-      port: 32400
-      targetPort: 4000
+      port: 4000
+      nodePort: 4000
     - name: https
-      port: 32443
-      targetPort: 443
+      nodePort: 443
+      port: 443
 ---
 apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2
 kind: Deployment
