--- a/elbouju/srcs/wordpress.yaml
+++ b/elbouju/srcs/wordpress.yaml
@@ -6,8 +6,8 @@ metadata:
     app: wordpress
 spec:
   ports:
-    - port: 80
-      nodePort: 5050
+    - port: 32505
+      targetPort: 5050
       protocol: TCP
       name: http
   selector:
