--- a/elbouju/srcs/wordpress/Dockerfile
+++ b/elbouju/srcs/wordpress/Dockerfile
@@ -20,6 +20,6 @@ RUN unzip -q wordpress-4.9.6.zip -d ./ && \
 COPY scripts/start.sh start.sh
 COPY wp-config.php /var/www/localhost/htdocs/wp-config.php
 
-EXPOSE 80
+EXPOSE 80 5050
 
 ENTRYPOINT [ "./start.sh" ]
