--- a/thverney/srcs/wordpress.yaml
+++ b/thverney/srcs/wordpress.yaml
@@ -6,10 +6,10 @@ metadata:
     app: wordpress
 spec:
   ports:
-    - port: 32505
-      targetPort: 5050
+    - name: http
+      port: 5050
+      targetPort: 80
       protocol: TCP
-      name: http
   selector:
     app: wordpress
     tier: frontend
@@ -61,8 +61,8 @@ spec:
         - name: DB_NAME
           value: wordpress
         ports:
-        - containerPort: 80
-          name: wordpress
+        - containerPort: 5050
+          name: http
         volumeMounts:
         - name: wordpress-persistent-storage
           mountPath: /var/www/html
