--- a/thverney/srcs/wordpress/Dockerfile
+++ b/thverney/srcs/wordpress/Dockerfile
@@ -2,16 +2,18 @@ FROM alpine:latest
 
 RUN apk update && apk add wget && mkdir /www \
 && apk add php7 php7-fpm php7-opcache php7-gd php7-mysqli php7-zlib php7-curl php7-mbstring php7-json php7-session
+RUN mkdir -p /run/apache2 /run/httpd
+
+WORKDIR /scripts
 
 RUN wget https://wordpress.org/latest.tar.gz \
 && tar -xvf latest.tar.gz \
 && mv wordpress/* /www \
 && rm -rf /var/cache/apk/*
 
-COPY wp-config.php /www/wp-config.php
-COPY start.sh .
+COPY start.sh start.sh
+COPY wp-config.php /var/www/localhost/htdocs/wp-config.php
 
-RUN chmod 777 start.sh
+EXPOSE 80 5050
 
-EXPOSE 5050
-CMD ./start.sh
+ENTRYPOINT [ "./start.sh" ]
