--- a/thverney/srcs/mysql.yaml
+++ b/thverney/srcs/mysql.yaml
@@ -7,6 +7,7 @@ metadata:
 spec:
   ports:
     - port: 3306
+      targetPort: 3306
   selector:
     app: mysql
     tier: mysql
@@ -25,7 +26,7 @@ spec:
     requests:
       storage: 1Gi
 ---
-apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2
+apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: mysql
@@ -35,35 +36,22 @@ spec:
   selector:
     matchLabels:
       app: mysql
-      tier: mysql
-  strategy:
-    type: Recreate
   template:
     metadata:
       labels:
         app: mysql
-        tier: mysql
     spec:
       containers:
-      - image: mysql_alpine
+      - name: mysql
+        image: mysql_alpine
         imagePullPolicy: Never
-        name: mysql
-        env:
-        - name: MYSQL_ROOT_PASSWORD
-          value: password
-        - name: MYSQL_DATABASE
-          value: wordpress
-        - name: MYSQL_USER
-          value: root
-        - name: MYSQL_PASSWORD
-          value: password
         ports:
         - containerPort: 3306
           name: mysql
         volumeMounts:
-        - name: mysql-persistent-storage
+        - name: mysql
           mountPath: /var/lib/mysql
       volumes:
-      - name: mysql-persistent-storage
+      - name: mysql
         persistentVolumeClaim:
           claimName: mysql-pv-claim
