--- a/thverney/srcs/wordpress.yaml
+++ b/thverney/srcs/wordpress.yaml
@@ -8,65 +8,32 @@ spec:
   ports:
     - name: http
       port: 5050
-      targetPort: 80
+      targetPort: 5050
       protocol: TCP
   selector:
     app: wordpress
     tier: frontend
   type: LoadBalancer
 ---
-apiVersion: v1
-kind: PersistentVolumeClaim
-metadata:
-  name: wp-pv-claim
-  labels:
-    app: wordpress
-spec:
-  accessModes:
-    - ReadWriteOnce
-  resources:
-    requests:
-      storage: 1Gi
----
-apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2
+apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: wordpress
   labels:
     app: wordpress
 spec:
+  replicas: 1
   selector:
     matchLabels:
       app: wordpress
-      tier: frontend
-  strategy:
-    type: Recreate
   template:
     metadata:
       labels:
         app: wordpress
-        tier: frontend
     spec:
       containers:
-      - image: wordpress_alpine
-        imagePullPolicy: Never
-        name: wordpress
-        env:
-        - name: DB_HOST
-          value: mysql
-        - name: DB_USER
-          value: root
-        - name: DB_PASSWORD
-          value: password
-        - name: DB_NAME
-          value: wordpress
+      - name: wordpress
+        image: wordpress_alpine
         ports:
         - containerPort: 5050
-          name: http
-        volumeMounts:
-        - name: wordpress-persistent-storage
-          mountPath: /var/www/html
-      volumes:
-      - name: wordpress-persistent-storage
-        persistentVolumeClaim:
-          claimName: wp-pv-claim
+        imagePullPolicy: Never
