--- a/thverney/srcs/mysql/Dockerfile
+++ b/thverney/srcs/mysql/Dockerfile
@@ -6,7 +6,11 @@ RUN apk update && \
 	rm -rf /var/cache/apk/*
 
 COPY run.sh /bin/run.sh
+COPY run_2.sh /bin/run_2.sh
 COPY my.cnf /etc/mysql/my.cnf
+RUN chmod 777 run.sh
+RUN chmod 777 run_2.sh
+
 
 VOLUME ["/var/lib/mysql"]
 
