--- a/thverney/srcs/mysql/Dockerfile
+++ b/thverney/srcs/mysql/Dockerfile
@@ -5,15 +5,11 @@ RUN apk update && \
 	addgroup mysql mysql && \
 	rm -rf /var/cache/apk/*
 
-COPY run.sh /bin/run.sh
-COPY run_2.sh /bin/run_2.sh
+COPY start.sh /bin/start.sh
 COPY my.cnf /etc/mysql/my.cnf
-RUN chmod 777 run.sh
-RUN chmod 777 run_2.sh
-
 
 VOLUME ["/var/lib/mysql"]
 
 EXPOSE 3306
 
-ENTRYPOINT ["/bin/run.sh"]
+ENTRYPOINT ["/bin/start.sh"]
