--- a/thverney/srcs/mysql/my.cnf
+++ b/thverney/srcs/mysql/my.cnf
@@ -1,7 +1,9 @@
 [mysqld]
-user = root
-datadir = /var/lib/mysql
-port = 3306
-log-bin = /var/lib/mysql/mysql-bin
-bind-address = 0.0.0.0
-skip-networking = false
+user=root
+datadir=/var/lib/mysql
+port=3306
+log-bin=/var/lib/mysql/mysql-bin
+bind-address=0.0.0.0
+skip-grant-tables=false
+skip-networking=false
+skip_name_resolve
