--- a/thverney/srcs/phpmyadmin/Dockerfile
+++ b/thverney/srcs/phpmyadmin/Dockerfile
@@ -1,7 +1,8 @@
 FROM alpine:latest
 
 RUN apk update && apk upgrade && apk add bash \
-&& apk add php7 php7-fpm php7-opcache php7-gd php7-mysqli php7-zlib php7-curl php7-mbstring php7-json php7-session
+&& apk add mysql mysql-client \
+&& apk add php7 php7-fpm php7-opcache php7-gd php7-mysqli php7-zlib php7-curl php7-mbstring php7-json php7-session 
 
 RUN wget https://files.phpmyadmin.net/phpMyAdmin/4.9.0.1/phpMyAdmin-4.9.0.1-all-languages.tar.gz \
 && tar -xvf phpMyAdmin-4.9.0.1-all-languages.tar.gz \
