--- a/thverney/srcs/mysql.yaml
+++ b/thverney/srcs/mysql.yaml
@@ -45,6 +45,9 @@ spec:
       - name: mysql
         image: mysql_alpine
         imagePullPolicy: Never
+        env:
+          - name: MYSQL_ROOT_PASSWORD
+            value: password
         ports:
         - containerPort: 3306
           name: mysql
