trying to connect wp to mysql

--- a/thverney/srcs/wordpress/Dockerfile
+++ b/thverney/srcs/wordpress/Dockerfile
@@ -1,19 +1,9 @@
-FROM alpine:latest
+FROM wordpress:php7.4-fpm-alpine
 
-RUN apk update && apk add wget && mkdir /www \
-&& apk add php7 php7-fpm php7-opcache php7-gd php7-mysqli php7-zlib php7-curl php7-mbstring php7-json php7-session
-RUN mkdir -p /run/apache2 /run/httpd
+RUN apk update && \
+	apk add nginx mysql-client
 
-WORKDIR /scripts
+COPY nginx.conf /etc/nginx/nginx.conf
+COPY start.sh /bin/start.sh
 
-RUN wget https://wordpress.org/latest.tar.gz \
-&& tar -xvf latest.tar.gz \
-&& mv wordpress/* /www \
-&& rm -rf /var/cache/apk/*
-
-COPY start.sh start.sh
-COPY wp-config.php /var/www/localhost/htdocs/wp-config.php
-
-EXPOSE 80 5050
-
-ENTRYPOINT [ "./start.sh" ]
+ENTRYPOINT ["/bin/start.sh"]
