--- a/thverney/srcs/wordpress/nginx.conf
+++ b/thverney/srcs/wordpress/nginx.conf
@@ -26,7 +26,7 @@ http {
 		listen 5050 default_server;
 		listen [::]:5050 default_server;
 
-		root /var/www/html;
+		root /var/www/wordpress;
 		index index.php;
 
 		location ~* ^.+.(jpg|jpeg|gif|css|png|js|ico|xml)$ {
