--- a/thverney/srcs/mysql.yaml
+++ b/thverney/srcs/mysql.yaml
@@ -7,7 +7,6 @@ metadata:
 spec:
   ports:
     - port: 3306
-      targetPort: 3306
   selector:
     app: mysql
     tier: mysql
@@ -33,21 +32,28 @@ metadata:
   labels:
     app: mysql
 spec:
+  replicas: 1
+  strategy:
+    type: Recreate
   selector:
     matchLabels:
       app: mysql
+      tier: mysql
   template:
     metadata:
       labels:
         app: mysql
+        tier: mysql
     spec:
       containers:
-      - name: mysql
-        image: mysql_alpine
+      - image: mysql_alpine
+        name: mysql
         imagePullPolicy: Never
         env:
           - name: MYSQL_ROOT_PASSWORD
             value: password
+          - name: MYSQL_USER
+            value: root
         ports:
         - containerPort: 3306
           name: mysql
