--- a/thverney/srcs/mysql/Dockerfile
+++ b/thverney/srcs/mysql/Dockerfile
@@ -2,13 +2,15 @@ FROM alpine:3.11.3
 
 RUN apk update && \
 	apk add mysql mysql-client && \
-	addgroup mysql mysql && \
 	rm -rf /var/cache/apk/*
+
+RUN	mkdir ./mysql
+RUN mkdir auth_pam_tool_dir
+RUN mkdir /auth_pam_tool_dir/auth_pam_tool
 
 COPY start.sh /bin/start.sh
 COPY my.cnf /etc/mysql/my.cnf
-
-VOLUME ["/var/lib/mysql"]
+COPY my.cnf /etc/my.cnf
 
 EXPOSE 3306
 
