--- a/thverney/srcs/wordpress.yaml
+++ b/thverney/srcs/wordpress.yaml
@@ -51,7 +51,7 @@ spec:
         name: wordpress
         env:
         - name: WORDPRESS_DB_HOST
-          value: 172.17.0.9
+          value: mysql
         - name: WORDPRESS_DB_USER
           value: root
         - name: WORDPRESS_DB_PASSWORD
