php and wordpress connected eachother and to mysql and i m working one 443 nginx

--- a/thverney/srcs/nginx-deployment.yaml
+++ b/thverney/srcs/nginx-deployment.yaml
@@ -44,9 +44,9 @@ spec:
         name: nginx
         env:
         - name: SSH_USER
-          value: admin
+          value: root
         - name: SSH_PASSWORD
-          value: admin
+          value: password
         ports:
         - containerPort: 80
           name: http
