--- a/thverney/srcs/nginx/nginx.conf
+++ b/thverney/srcs/nginx/nginx.conf
@@ -1,32 +1,44 @@
-worker_processes auto;
-pid /run/nginx.pid;
+user                            www;
+# worker_processes                auto; # it will be determinate automatically by the number of core
+
+# error_log                       /var/log/nginx/error.log warn;
+# pid                             /var/run/nginx/nginx.pid; # it permit you to use /etc/init.d/nginx reload|restart|stop|start
 
 events {
-	worker_connections 768;
-	# multi_accept on;
+    worker_connections          1024;
 }
 
 http {
-	sendfile on;
-	tcp_nopush on;
-	tcp_nodelay on;
-	keepalive_timeout 65;
-	types_hash_max_size 2048;
-	index index.html index.htm;
+    include                     /etc/nginx/mime.types;
+    default_type                application/octet-stream;
+    sendfile                    on;
+    access_log                  /var/log/nginx/access.log;
+    keepalive_timeout           3000;
 
-	include /etc/nginx/mime.types;
-	default_type application/octet-stream;
+    server {
+        listen 80;
+        listen [::]:80;
 
-	gzip on;
+        server_name www;
+		return 301 https://$host$request_uri;
+    }
 
-	server {
-		server_name nginx;
-		listen 80 default_server;
-		listen 443 default_server ssl;
+    server {
 
-		root /www;
+        listen 443 ssl ;
+        listen [::]:443 ssl ;
 
-		ssl_certificate /etc/nginx/ssl/nginx.crt;
-		ssl_certificate_key /etc/nginx/ssl/nginx.key;
-	}
+        server_name www;
+
+        ssl_certificate /etc/nginx/ssl/nginx.pem;
+        ssl_certificate_key /etc/nginx/ssl/nginx.key;
+
+        root /www;
+        index index.html;
+
+        location / {
+            autoindex on;
+            try_files $uri $uri/ =404;
+        }
+    }
 }
