working on nginx ssh

--- a/thverney/srcs/nginx/Dockerfile
+++ b/thverney/srcs/nginx/Dockerfile
@@ -22,8 +22,8 @@ RUN rm /etc/nginx/nginx.conf
 ADD nginx.conf /etc/nginx/nginx.conf
 
 
-RUN adduser -D user
-RUN echo "root:password"|chpasswd
+RUN adduser -D "__SSH_USERNAME__"
+RUN echo "__SSH_USERNAME__:__SSH_PASSWORD__"|chpasswd
 
 COPY id_rsa_key_ssh /etc/ssh/ssh_host_rsa_key
 COPY sshd_config /etc/ssh/
