--- a/thverney/srcs/nginx/nginx.conf
+++ b/thverney/srcs/nginx/nginx.conf
@@ -30,7 +30,8 @@ http {
 
         server_name www;
 
-        ssl_certificate /etc/nginx/ssl/nginx.pem;
+        # ssl on;
+        ssl_certificate /etc/nginx/ssl/nginx.crt;
         ssl_certificate_key /etc/nginx/ssl/nginx.key;
 
         root /www;
