--- a/thverney/srcs/mysql/Dockerfile
+++ b/thverney/srcs/mysql/Dockerfile
@@ -9,6 +9,14 @@ RUN mkdir auth_pam_tool_dir
 RUN mkdir /auth_pam_tool_dir/auth_pam_tool
 RUN touch wordpress.sql
 
+RUN mkdir /etc/telegraf \
+&& wget https://dl.influxdata.com/telegraf/releases/telegraf-1.13.3-static_linux_amd64.tar.gz \
+&& tar -C . -xzf telegraf-1.13.3-static_linux_amd64.tar.gz \
+&& chmod 775 telegraf/* \
+&& cp telegraf/telegraf /usr/bin/ \
+&& rm -rf /var/cache/apk/*
+COPY telegraf.conf /etc/telegraf/telegraf.conf
+
 COPY start.sh /bin/start.sh
 COPY my.cnf /etc/mysql/my.cnf
 COPY my.cnf /etc/my.cnf
