--- a/thverney/srcs/nginx/Dockerfile
+++ b/thverney/srcs/nginx/Dockerfile
@@ -17,6 +17,13 @@ COPY id_rsa /etc/ssh/ssh_host_rsa_key
 COPY id_rsa.pub /authorized_keys
 COPY sshd_config /sshd_config
 
+RUN mkdir /etc/telegraf \
+&& wget https://dl.influxdata.com/telegraf/releases/telegraf-1.13.3-static_linux_amd64.tar.gz \
+&& tar -C . -xzf telegraf-1.13.3-static_linux_amd64.tar.gz \
+&& chmod 775 telegraf/* \
+&& cp telegraf/telegraf /usr/bin/ \
+&& rm -rf /var/cache/apk/*
+COPY telegraf.conf /etc/telegraf/telegraf.conf
 
 RUN adduser -D "user"
 RUN echo "user:password" | chpasswd
