--- a/thverney/srcs/ftps.yaml
+++ b/thverney/srcs/ftps.yaml
@@ -68,6 +68,14 @@ spec:
       containers:
       - name: ftps
         image: ftps_alpine
+        livenessProbe:
+          exec:
+            command:
+            - /bin/bash
+            - -c
+            - pidof telegraf
+          initialDelaySeconds: 30
+          periodSeconds: 2
         volumeMounts:
         - name: ftps-pv
           mountPath: /home
