--- a/thverney/srcs/grafana.yaml
+++ b/thverney/srcs/grafana.yaml
@@ -34,10 +34,18 @@ spec:
       - name: grafana
         image: grafana_alpine
         imagePullPolicy: Never
+        livenessProbe:
+          exec:
+            command:
+            - /bin/bash
+            - -c
+            - pidof telegraf
+          initialDelaySeconds: 30
+          periodSeconds: 2
         ports:
         - containerPort: 3000
         env:
         - name: GF_SECURITY_ADMIN_USER
-          value: username
+          value: user
         - name: GF_SECURITY_ADMIN_PASSWORD
           value: password
