--- a/thverney/srcs/grafana/telegraf.conf
+++ b/thverney/srcs/grafana/telegraf.conf
@@ -145,9 +145,9 @@
 
   ## HTTP Basic Auth
   # username = "telegraf"
-  username = "user"
+  username = "root"
   # password = "metricsmetricsmetricsmetrics"
-  password = "password"
+  password = "root"
 
   ## HTTP User-Agent
   user_agent = "telegraf"
@@ -4112,7 +4112,6 @@
 # # Read TCP metrics such as established, time wait and sockets counts.
 # [[inputs.netstat]]
 #   # no configuration
-
 
 # # Read Nginx's basic status information (ngx_http_stub_status_module)
  #[[inputs.nginx]]
