--- a/thverney/srcs/metallb-config.yaml
+++ b/thverney/srcs/metallb-config.yaml
@@ -6,7 +6,7 @@ metadata:
 data:
   config: |
     address-pools:
-    - name: my-ip-space
+    - name: default
       protocol: layer2
       addresses:
       - 192.168.99.100-192.168.99.190
