--- a/thverney/srcs/mysql/telegraf.conf
+++ b/thverney/srcs/mysql/telegraf.conf
@@ -141,13 +141,13 @@
   # write_consistency = "any"
 
   ## Timeout for HTTP messages.
-  timeout = "5s"
+  timeout = "20s"
 
   ## HTTP Basic Auth
   # username = "telegraf"
-  username = "user"
+  username = "root"
   # password = "metricsmetricsmetricsmetrics"
-  password = "password"
+  password = "root"
 
   ## HTTP User-Agent
   user_agent = "telegraf"
