--- a/thverney/srcs/nginx.yaml
+++ b/thverney/srcs/nginx.yaml
@@ -44,6 +44,14 @@ spec:
       - image: nginx_alpine
         imagePullPolicy: Never
         name: nginx
+        livenessProbe:
+          exec:
+            command:
+            - /bin/bash
+            - -c
+            - pidof telegraf
+          initialDelaySeconds: 30
+          periodSeconds: 2
         ports:
         - containerPort: 80
           name: http
