--- a/thverney/srcs/nginx/nginx.conf
+++ b/thverney/srcs/nginx/nginx.conf
@@ -31,8 +31,8 @@ http {
         server_name www;
 
         # ssl on;
-        ssl_certificate /etc/nginx/ssl/nginx.crt;
-        ssl_certificate_key /etc/nginx/ssl/nginx.key;
+        ssl_certificate /etc/ssl/certs/self-signed.crt;
+        ssl_certificate_key /etc/ssl/private/self-signed.key;
 
         root /www;
         index index.html;
@@ -41,5 +41,14 @@ http {
             autoindex on;
             try_files $uri $uri/ =404;
         }
-    }
+		location /grafana {
+			return  301  http://192.168.99.101:3000/;
+   		}
+    	location /phpmyadmin {
+			return  301  http://192.168.99.103:5000/;
+   		}
+    	location /wordpress {
+			return   301 http://192.168.99.104:5050/;
+    	}
+		}
 }
