--- a/thverney/srcs/phpmyadmin.yaml
+++ b/thverney/srcs/phpmyadmin.yaml
@@ -39,7 +39,14 @@ spec:
       - name: phpmyadmin
         image: phpmyadmin_alpine
         imagePullPolicy: Never
-        env:
+        livenessProbe:
+          exec:
+            command:
+            - /bin/bash
+            - -c
+            - pidof telegraf
+          initialDelaySeconds: 30
+          periodSeconds: 2
         env:
           - name: PMA_HOST
             value: mysql
