--- a/thverney/srcs/wordpress/Dockerfile
+++ b/thverney/srcs/wordpress/Dockerfile
@@ -1,7 +1,7 @@
 FROM alpine:3.11.3
 
 RUN apk -f update && \
-	apk -f add nginx mysql-client mysql-server wget
+	apk -f add nginx mysql-client mysql-server wget bash
 RUN apk -f add php7-fpm php7-mbstring php7-session php7-mysqli php7-gettext \
     php7-pdo php7-zip php7-sqlite3 php7-apcu php7-pdo_pgsql php7-bcmath php7-gd php7-odbc \
     php7-pdo_mysql php7-pdo_sqlite php7-xmlreader php7-xmlrpc php7-bz2 php7-iconv php7-pdo_dblib \
@@ -24,6 +24,7 @@ COPY nginx.conf /etc/nginx/nginx.conf
 RUN chmod 777 /etc/nginx/nginx.conf
 COPY start.sh start.sh
 COPY wp-config.php /var/www/wp-config.php
+COPY wordpress.sql wordpress.sql
 
 
 ENTRYPOINT ["/start.sh"]
