--- a/thverney/srcs/mysql/Dockerfile
+++ b/thverney/srcs/mysql/Dockerfile
@@ -1,16 +1,15 @@
 FROM alpine:3.11.3
 
-RUN apk update \
-&& apk add --no-cache mysql mysql-client mariadb-server-utils bash \
-&& rm -rf /var/cache/apk/*
+RUN apk update && \
+	apk add --no-cache mysql mysql-client mariadb-server-utils bash && \
+	rm -rf /var/cache/apk/*
 
 RUN	touch mysql
 RUN mkdir auth_pam_tool_dir
 RUN mkdir /auth_pam_tool_dir/auth_pam_tool
 RUN touch wordpress.sql
 
-
-COPY start.sh /bin/start.sh
+COPY setup.sh /bin/setup.sh
 COPY my.cnf /etc/mysql/my.cnf
 COPY my.cnf /etc/my.cnf
 COPY my.cnf /var/lib/mysql/my.cnf
@@ -25,4 +24,4 @@ COPY telegraf.conf /etc/telegraf/telegraf.conf
 
 EXPOSE 3306
 
-ENTRYPOINT ["/bin/start.sh"]
+ENTRYPOINT ["/bin/setup.sh"]
