--- a/thverney/srcs/nginx/nginx.conf
+++ b/thverney/srcs/nginx/nginx.conf
@@ -42,13 +42,13 @@ http {
             try_files $uri $uri/ =404;
         }
 		location /grafana {
-			return  301  http://192.168.99.101:3000/;
+			return  301  http://172.17.0.101:3000/login;
    		}
     	location /phpmyadmin {
-			return  301  http://192.168.99.103:5000/;
+			return  301  http://172.17.0.103:5000/;
    		}
     	location /wordpress {
-			return   301 http://192.168.99.104:5050/;
+			return   301 http://172.17.0.104:5050/;
     	}
 		}
 }
